# Group-Project

manualcontrol/: CMakeLists.txt  package.xml
manualcontrol/src/: manual_control.py  manual_control_joy.py
motion_msgs/: CMakeLists.txt  package.xml
motion_msgs/msg/: ManualControl.msg  alg_msgs.msg  alle_msgs.msg  dyn_msgs.msg
osi3_bridge/: CMakeLists.txt  package.xml
osi3_bridge/msg/: MovingObject.msg  TrafficUpdateMovingObject.msg
pure_pursuit_controller/: CMakeLists.txt  package.xml
pure_pursuit_controller/src/scripts/: Pure_Pursuit.py  pedal_pose_logger.py  visualize_markers.py  waypoint_logger_pure_pursuit.py
pure_pursuit_controller/waypoints/: pedal_4639.csv
vd_virtual/: CMakeLists.txt  CMakeLists_1.txt  package.xml
vd_virtual/launch/: total.launch
vd_virtual/src/: Pub_LAt.py  Pub_alle.py  Pub_gear.py  Pub_osi3_alle.py  Pub_vel.py  lateral_dynamics_updated_1.py  ld.py  manual_control_04052021.py
